# vibescaler

./: .gitignore  .spec-coverage-baseline.json  CONTEXT.md  CONTRIBUTING.md  NOTICE.md  README.md  app.yaml  gunicorn_conf.py  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  vulture_whitelist.py
.agents/agents/: spec-tester.md
.agents/hooks/: session-start-claude  session-start-cursor  spec-driven-workflow.md
.agents/plans/: 2026-03-13-trace-tag-key-separation.md  2026-04-10-sdk-auth-migration.md  2026-04-13-critical-judge-eval-fixes.md  2026-04-13-summarization-facilitator-ux.md  2026-04-13-summarization-tool-based-agent.md  2026-04-15-remove-databricks-host-app-yaml-resources.md  2026-04-15-trace-display-pipeline-consistency.md  2026-04-21-unified-discovery-rubric-judge-loop-brainstorm.md  2026-04-27-v2-codebase-audit-keep-cut-refactor.md  2026-04-27-v2-first-principles-architecture.md  2026-04-27-v2-sprint-primitive-design.md  2026-04-27-v2-workshop-debt-and-sprint-split.md  2026-04-28-v2-workshop-creation-refactor.md  unify-discovery-ux_fd680b2f.plan.md
.agents/skills/brainstorming/: SKILL.md
.agents/skills/grill-me-to-docs/: SKILL.md
.agents/skills/grill-me-with-docs/: SKILL.md
.agents/skills/project-management/: SKILL.md
.agents/skills/spec-audit/: SKILL.md
.agents/skills/to-issues/: SKILL.md
.agents/skills/to-prd/: SKILL.md
.agents/skills/verification-testing/: SKILL.md
.agents/skills/writing-plans/: SKILL.md
.claude/: CLAUDE.md
.claude/agents/: spec-tester.md
.claude/hooks/: session-start
.claude/plans/: 2026-04-11-trace-summarization.md
.cursor/: plans
.cursor/hooks/: session-start
.cursor/rules/: guidelines.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy-docs.yml  e2e-test.yml
client/: .npmrc  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
client/src/: App.tsx  AppShellPathBar.test.tsx  index.css  main.tsx
client/src/client/: index.ts
client/tests/: bypass-login.spec.ts  login-redirection.spec.ts
doc/: ABOUT_THESE_DOCS.md  CHANGELOG.md  DISCOVERY.md  ERRORS.md  FACILITATOR_GUIDE.md  FAQ.md  OVERVIEW.md  PARTICIPANT_BRIEF.md  README.md  RELEASE_NOTES.md  RUNNING_A_SESSION.md  USING_WITH_AGENTS.md  lakebase-setup.md  quickstart.md  spec-coverage.md
doc/roadmap/: grading_rubrics_research.md  v2_master_north_star.md
docs/: .npmrc  docusaurus.config.js  package-lock.json  package.json  sidebars.js  specsSidebars.js  v2Sidebars.js
docs/plans/: 2026-02-27-facilitator-discovery-workspace-design.md  2026-02-27-facilitator-discovery-workspace.md  2026-03-02-finding-to-draft-transition-design.md  2026-03-02-finding-to-draft-transition-plan.md  2026-03-03-draft-to-rubric-creation-design.md  2026-03-03-draft-to-rubric-creation-plan.md  grading_rubrics_research.md  llm_judge_active_learning_prd.md
docs/research/: Grading Rubrics for AI Model Calibration  From Expert Human Feedback to LLM-as-a-Judge.md
docs/static/: spec-coverage.json
docs/v2_design/: app.jsx  index.html  sprint-create.jsx  tokens.css
jbw-v2/project/: .design-canvas.state.json  app-v2-surfaces.jsx  app.jsx  architecture.jsx  feed.jsx  index-print.html  index-v2-surfaces.html  index.html  setup-ia-b.jsx  setup-ia-c.jsx  setup-ia.jsx  shared.jsx  workshop-create.jsx  workspace-feed.jsx  workspace-grading.jsx  workspace-settings.jsx  workspace.jsx
migrations/: env.py
migrations/versions/: 0002_legacy_schema_fixes.py  0004_add_randomization_columns.py  0006_discovery_questions_model.py  0010_add_participant_notes.py  0017_add_summarization.py  0018_add_summarization_jobs.py  0019_remove_databricks_host.py  0020_add_eval_mode_core_tables.py  0021_add_discovery_social_thread_tables.py  0022_add_discovery_agent_run_events.py  0022_remove_legacy_password_auth.py  0023_add_project_setup_tables.py  0024_remove_legacy_password_auth.py
scripts/: repro_discovery_context_overflow.py
server/: app.py  database.py  db_bootstrap.py  db_config.py  models.py  postgres_manager.py
server/features/: __init__.py
server/routers/: __init__.py  databricks.py  dbsql_export.py  discovery.py  eval_mode.py  users.py  workshops.py
server/services/: alignment_service.py  classification_service.py  database_service.py  databricks_service.py  dbsql_export_service.py  discovery_analysis_service.py  discovery_dspy.py  discovery_service.py  draft_rubric_grouping_service.py  eval_criteria_service.py  eval_mode_service.py  followup_question_service.py  irr_service.py  irr_utils.py  judge_service.py  krippendorff_alpha.py  mlflow_intake_service.py  rubric_generation_service.py  trace_summarization_service.py
server/utils/: trace_display_utils.py
server/workers/: procrastinate_app.py
specs/: ANNOTATION_SPEC.md  ASSISTED_FACILITATION_SPEC.md  AUTHENTICATION_SPEC.md  BUILD_AND_DEPLOY_SPEC.md  CUSTOM_LLM_PROVIDER_SPEC.md  DATASETS_SPEC.md  DESIGN_SYSTEM_SPEC.md  DISCOVERY_SPEC.md  DISCOVERY_TRACE_ASSIGNMENT_SPEC.md  EVAL_MODE_SPEC.md  JUDGE_EVALUATION_SPEC.md  PROJECT_SETUP_SPEC.md  README.md  ROLE_PERMISSIONS_SPEC.md  RUBRIC_SPEC.md  SPEC_COVERAGE_GUIDE.md  SPEC_COVERAGE_MAP.md  TESTING_SPEC.md  TRACE_DISPLAY_SPEC.md  TRACE_INGESTION_SPEC.md  TRACE_SUMMARIZATION_SPEC.md  UI_COMPONENTS_SPEC.md
tests/: conftest.py
tests/contract/: test_mlflow_contracts.py
tests/integration/: test_annotation_submission.py  test_build_deploy_runtime.py  test_connection_resilience.py  test_databricks_model_apis.py  test_discovery_findings.py  test_judge_evaluation_storage.py  test_phase_transitions.py  test_trace_ingestion.py  test_workshop_crud.py
tests/unit/: test_build_deploy.py  test_databricks_apps_auth_provider.py  test_db_bootstrap_postgres.py  test_db_config.py  test_gunicorn_conf.py  test_health_smoke.py  test_migration_boolean_defaults.py  test_postgres_manager.py  test_redirect_location.py  test_registry_portability.py  test_spec_coverage_analyzer.py  test_summarization_job.py  test_testing_infrastructure.py
tools/: build_app.sh  docs_health_gate.py  spec_coverage_analyzer.py  test_summary.py
(+359 files in other folders)
