[project]
name = "human-eval-workshop"
version = "0.1.0"
description = "A comprehensive full-stack application for conducting human evaluation workshops on AI/ML models"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
authors = [
    { name = "Databricks Team" }
]
keywords = ["databricks", "mlflow", "human-evaluation", "annotation", "workshops", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "databricks-sdk>=0.14.0",
    "databricks-sql-connector>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-ai-slim[openai]>=0.2",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pandas>=2.1.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "click>=8.1.0",
    "mlflow[databricks,genai]>=3.9", # MemAlign optimizer requires 3.9+
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "PyYAML>=6.0",
    "jsonpath-ng>=1.5.3",
    "psycopg>=3.1.0", # PostgreSQL driver for Lakebase support
    "psycopg-binary>=3.1.0", # Pre-built binary for psycopg
    "psycopg-pool>=3.1.0", # Connection pooling for psycopg
    "dspy>=3.1.3",
    "pydantic-ai-slim[openai]>=0.2",
]

[tool.alembic]
script_location = "migrations"

# Default DB URL (can be overridden by env var DATABASE_URL inside migrations/env.py)
sqlalchemy.url = "sqlite:///./workshop.db"

[project.optional-dependencies]
dev = [
    "alembic>=1.16.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",  # For testing
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
human-eval-workshop = "server.app:main"
spec-coverage-analyzer = "tools.spec_coverage_analyzer:main"
spec-coverage-gate = "tools.spec_coverage_gate:main"
spec-tagging-validator = "tools.spec_tagging_validator:main"
test-summary = "tools.test_summary:main"

[project.urls]
Homepage = "https://github.com/databricks/human-eval-workshop"
Documentation = "https://github.com/databricks/human-eval-workshop#readme"
Repository = "https://github.com/databricks/human-eval-workshop"
Issues = "https://github.com/databricks/human-eval-workshop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "ipykernel>=7.1.0",
    "pytest-json-report>=1.5.0",
    "vulture>=2.11",
    "testcontainers[postgres]>=4.0.0",
]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313", "py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | node_modules
  | client
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "client",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "RUF",  # ruff-specific rules
    "PERF", # perflint
]
ignore = [
    "E501",   # line too long (handled by black/formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "RET504", # unnecessary assignment before return — often aids readability
    "SIM108", # ternary instead of if/else — often less readable
    "RUF001", # ambiguous unicode in strings — intentional special characters
    "RUF002", # ambiguous unicode in docstrings — intentional special characters
    "RUF013", # implicit-optional — valid but would change many signatures
    "E402",   # module-import-not-at-top — conditional imports are intentional
    "SIM102", # collapsible-if — nested ifs often aid readability
    "SIM105", # suppressible-exception — contextlib.suppress not always clearer
    "PERF401",# manual-list-comprehension — explicit loops can be clearer
    "PERF403",# manual-dict-comprehension — explicit loops can be clearer
    "RUF012", # mutable-class-default — ClassVar annotation not always needed
]

[tool.ruff.lint.per-file-ignores]
"server/services/*" = ["C401"]  # generator-to-set: explicit in service layer

[tool.ruff.lint.isort]
known-first-party = ["server"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "databricks.*",
    "mlflow.*",
    "pandas.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=server",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    # Spec coverage markers - use @pytest.mark.spec("SPEC_NAME") to tag tests
    "spec: marks test as covering a spec (use with spec name argument)",
    # Requirement coverage marker - use @pytest.mark.req("requirement text") to link to spec success criteria
    "req: marks test as covering a specific requirement from spec success criteria",
]

[tool.coverage.run]
source = ["server"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
